# CardMaster

./: .gitignore  Cargo.toml  flake.nix
discord/: Cargo.toml
discord/partial_id/: Cargo.toml
discord/partial_id/src/: lib.rs
discord/resource/: Cargo.toml
discord/resource/src/: lib.rs
discord/src/: application.rs  channel.rs  command.rs  gateway.rs  guild.rs  interaction.rs  lib.rs  message.rs  request.rs  resource.rs  user.rs
partial_id/src/: lib.rs
src/: application.rs  cah.rs  channel.rs  command.rs  game.rs  gateway.rs  guild.rs  interaction.rs  main.rs  message.rs  request.rs  resource.rs  setup.rs  user.rs
src/cah/: mod.rs  read.rs  setup.rs  write.rs
src/discord/: application.rs  channel.rs  command.rs  gateway.rs  guild.rs  interaction.rs  message.rs  mod.rs  request.rs  resource.rs  user.rs
src/game/: mod.rs  setup.rs  ui.rs  widget.rs
