[package]
name = "cardmaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_setters = "0.1.5"
isahc = { version = "1.7.2", features = ["serde_json", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
partial_id = { path = "partial_id" }
serde_repr = "0.1.12"
derive_builder = "0.12.0"
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
futures-util = "0.3.28"
rand = "0.8.5"
tokio-stream = "0.1.14"
dotenv_codegen = "0.15.0"
