[package]
name = "cardmaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.27.0", features = ["full"] }
async-trait = "0.1.68"
discord = { path = "discord" }
futures-util = "0.3.28"
monostate = "0.1.6"
ini = "1.3.0"
rand = "0.8.5"
dotenv = "0.15.0"

[patch.crates-io]
serde = { git = "https://github.com/Astavie/serde.git", branch = "integer-tags-for-enums-noprecompile" }
